[gd_scene load_steps=18 format=2]

[ext_resource path="res://Sprites/Backgrounds/BgW1.png" type="Texture" id=1]
[ext_resource path="res://Menus/script/Initial.gd" type="Script" id=2]
[ext_resource path="res://WIP/Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/LogoNuevo.png" type="Texture" id=4]
[ext_resource path="res://Tilemaps/TileMapW1.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprites/Buttons/ExitHover.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Buttons/PlayNormal.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Buttons/SettingsNormal.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Buttons/PlayHover.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Buttons/PlayPressed.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Buttons/SettingsHover.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Buttons/SettingsPressed.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Buttons/CreditsHover.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Buttons/CreditsNormal.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Buttons/CreditsPressed.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Buttons/ExitNormal.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Buttons/ExitPressed.png" type="Texture" id=17]

[node name="Initial" type="Control"]
margin_right = 1023.0
margin_bottom = 627.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -1.41422 )
scale = Vector2( 2, 2 )
z_index = -10
texture = ExtResource( 1 )
centered = false

[node name="Background" parent="." instance=ExtResource( 3 )]

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 512, 160 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="TileMap" parent="." instance=ExtResource( 5 )]
tile_data = PoolIntArray( 196611, 4, 0, 196612, 13, 0, 262146, 13, 0, 262148, 2, 0, 262149, 10, 0, 262171, 16, 0, 262172, 8, 0, 327681, 4, 0, 327682, 8, 0, 327683, 1, 0, 327707, 5, 0, 327709, 10, 0, 393218, 7, 0, 393221, 9, 0, 393222, 8, 0, 393244, 16, 0, 393245, 8, 0, 458758, 10, 0, 458780, 5, 0, 589827, 19, 0, 589828, 19, 0, 589829, 20, 0, 589849, 18, 0, 589850, 19, 0, 655362, 19, 0, 655363, 19, 0, 655364, 19, 0, 655385, 19, 0, 720898, 18, 0, 720899, 19, 0, 851974, 6, 0, 851995, 1, 0, 851996, 10, 0, 917509, 9, 0, 917510, 15, 0, 917530, 2, 0, 917531, 7, 0, 917532, 3, 0, 917533, 8, 0, 983045, 6, 0, 983065, 14, 0, 983066, 8, 0, 983067, 3, 0, 983069, 14, 0, 1048581, 2, 0, 1048582, 8, 0, 1048583, 15, 0, 1048602, 14, 0, 1114118, 7, 0, 1114119, 6, 0, 1114134, 19, 0, 1114135, 19, 0, 1179669, 19, 0, 1179670, 17, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 368.0
margin_top = 320.0
margin_right = 560.0
margin_bottom = 476.0
rect_scale = Vector2( 1.5, 1.5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Play" type="TextureButton" parent="VBoxContainer"]
margin_right = 192.0
margin_bottom = 48.0
focus_neighbour_top = NodePath("../Exit")
focus_neighbour_bottom = NodePath("../Settings")
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 9 )

[node name="Settings" type="TextureButton" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 192.0
margin_bottom = 84.0
focus_neighbour_top = NodePath("../Play")
focus_neighbour_bottom = NodePath("../Credits")
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 11 )

[node name="Credits" type="TextureButton" parent="VBoxContainer"]
margin_top = 88.0
margin_right = 192.0
margin_bottom = 120.0
focus_neighbour_top = NodePath("../Settings")
focus_neighbour_bottom = NodePath("../Exit")
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 13 )

[node name="Exit" type="TextureButton" parent="VBoxContainer"]
margin_top = 124.0
margin_right = 192.0
margin_bottom = 156.0
focus_neighbour_top = NodePath("../Credits")
focus_neighbour_bottom = NodePath("../Play")
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 6 )

[connection signal="mouse_entered" from="VBoxContainer/Play" to="." method="_on_Play_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Settings" to="." method="_on_Settings_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Credits" to="." method="_on_Credits_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
